Closed Bug 617953 Opened 15 years ago Closed 15 years ago

Hunspell::analyze leaks p = pSMgr->suggest_morph()

Categories

(Core :: Spelling checker, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
Tracking Status
status1.9.2 --- ?

People

(Reporter: timeless, Assigned: caolanm)

References

(Blocks 1 open bug, )

Details

(Keywords: coverity, memory-leak, Whiteboard: [fixed-in-hunspell-1.2.13])

Attachments

(1 file)

1379 int Hunspell::analyze(char*** slst, const char * word) 1380 { 1530 if (spell(cw)) { 1531 char * p = pSMgr->suggest_morph(cw); 1532 if (p) return line_tok(pSMgr->suggest_morph(cw), slst, MSEP_REC); 1533 } line 1532 should be passing p instead of calling the same function again
Attachment #496559 - Flags: review+
Whiteboard: [fixed-in-hunspell-1.2.13]
Attachment #496559 - Flags: approval2.0?
Whiteboard: [fixed-in-hunspell-1.2.13] → [fixed-in-hunspell-1.2.13][needs landing]
Keywords: 4xp, checkin-needed
Keywords: 4xp
Assignee: nobody → caolanm
Status: NEW → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [fixed-in-hunspell-1.2.13][needs landing] → [fixed-in-hunspell-1.2.13]
I think you need to request branch approval, Ryan, if you want this on 1.9.2.
Not sure if it's worth taking on 1.9.2 or not. I figured I'd ask approval if the drivers want to take these fixes. We obviously need to take the topcrash fix, though.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: