Bug 617953 - Hunspell::analyze leaks p = pSMgr->suggest_morph(). r=timeless, a=roc.